# ariprog

./: Cargo.toml  README.md  crates-readme.md
src/: lib.rs  tests.rs
tests/: unit_test.rs
