[package]
name = "ariprog"
version = "0.1.0"
edition = "2021"
authors = ["Kauê Fraga Rodrigues"]
description = "🧮 Need a powerful and simple library to work with arithmetic progressions in Rust? You should definitively try ariprog out!"
license = "MIT"
readme = "crates-readme.md"
keywords = ["math", "ap"]
repository = "https://github.com/kauefraga/ariprog"

[dependencies]
