[package]
name = "ariprog"
version = "0.1.1"
edition = "2021"
authors = ["Kauê Fraga Rodrigues"]
description = "🧮 Need a powerful and simple library to work with arithmetic progressions in Rust? You should definitively try out ariprog!"
license = "MIT"
keywords = ["math", "ap"]
repository = "https://github.com/kauefraga/ariprog"

[dependencies]
